<resources>
  <string name="app_name">音乐1号</string>
  <string name="cancle">取 消</string>
  <string name="confirm">确 定</string>
  <!-- Device -->
  <string name="currentNetworkDevice">当前网络设备</string>
  <string name="newDevice">添加新设备</string>
  <string name="selectDevice">选择设备：</string>
  <string name="selectNetwork">选择加入网络</string>
  <string name="setDeviceName">设置设备名称</string>
  <string name="networkPass">输入网络密码</string>
  <string name="connectDeviceMsg">正在连接设备…</string>
  <string name="deviceConnectSucc">设备连接成功…</string>
  <string name="deviceConnectTimeout">设备连接超时…</string>
  <string name="setDeviceMsg">正在设置设备…</string>
  <string name="connectWifiMsg">正在连接网络…</string>
  <string name="WifiConnectSucc">网络连接成功…</string>
  <string name="WifiConnectTimeout">网络连接超时…</string>
  <string name="not_network">网络未连接</string>
  <string name="wait_device_set_succ">等待设备连接成功</string>

  <string name="action_settings">Settings</string>
  <string name="local_source">本地音乐</string>
  <string name="cloud_source">在线音乐</string>
  <string name="phone_source">本机音乐</string>
  <string name="device_management">设备管理</string>
  <string name="download_tasks">下载任务</string>
  <string name="more">更多</string>
  <string name="category">分类</string>
  <string name="by_name">按名字</string>
  <string name="by_album">按专辑</string>
  <string name="by_artist">按歌手</string>
  <string name="select_source">音源选择</string>
  <string name="zero">0</string>
  <string name="device_source">设备音乐</string>
  <string name="this_phone">本机</string>
  <string name="start_http_service_failed">开启 HTTP Server 失败！</string>
  <string name="unknown">未知</string>
  <string name="time_zero">00:00</string>
  <string name="playlist">播放列表</string>
  <string name="play_error">无法播放：%s</string>
  <string name="transitionning">缓冲中</string>
  <string name="add_to_play_list">添加到播放队列</string>
  <string name="download_to_sdc">下载到本地</string>
  <string name="add_to_playlist_success">添加 %s 到播放队列</string>
  <string name="add_to_playlist_failed">添加 %s 到播放队列失败</string>
  <string name="migu_title">咪咕音乐</string>
  <string name="migu_des">移动正版音乐, 彩铃定制</string>
  <string name="beatles_music">甲壳虫音乐</string>
  <string name="chart">榜单</string>
  <string name="loading">正在加载</string>
  <string name="empty">无内容</string>
  <string name="load_error">加载错误</string>
  <string name="retry">重试</string>
  <string name="artist">歌手</string>
  <string name="song">歌曲</string>
  <string name="album">专辑</string>
  <string name="search">搜索</string>
  <string name="init">正在初始化</string>
  <string name="downloading">正在下载</string>
  <string name="pause">暂停</string>
  <string name="complete">完成</string>
  <string name="download">下载</string>
  <string name="start_download_task">开始下载 %s</string>
  <string name="no_sd_card">无法下载，未发现 SD 卡</string>
  <string name="waiting">等待</string>
  <!--<string name="failed">失败</string>-->
  <string name="start_download_task_failed">创建下载任务 %s 失败</string>
  <string name="choose_device">选择设备</string>
  <string name="remove">删除</string>
  <string name="setting">设置</string>
  <string name="online">在线</string>
  <string name="offline">离线</string>
  <string name="not_found">未找到</string>
  <string name="updating">更新中</string>
  <string name="device">设备</string>
  <string name="ssid">SSID</string>
  <string name="online_device">在线设备</string>
  <string name="offline_device">离线设备</string>
  <string name="input_password">输入密码</string>
  <string name="invalid_password">输入密码错误</string>
  <string name="do_not_show_again">不再提示</string>
  <string name="notice">提示</string>
  <string name="change_wifi_notice">该操作将会更改您的 Wi-Fi 状态，是否继续？</string>
  <string name="connecting_to">正在连接 %s</string>
  <string name="getting_settings">正在获取设备信息</string>
  <string name="device_name">设备名称</string>
  <string name="firmware_version">固件版本</string>
  <string name="connect_mode">连接模式</string>
  <string name="direct_connect">直连</string>
  <string name="network">网络</string>
  <string name="connecting_ssid">连接的网络</string>
  <string name="select_network">选择网络</string>
  <string name="current_network">当前网络：</string>
  <string name="out_of_current_network">不在当前网络</string>
  <string name="current_version">当前版本：%s</string>
  <string name="exit">退出</string>
  <string name="wifi_not_connect">未连接</string>
  <string name="current_device">当前设备：%s</string>
  <string name="click_to_open_setting">点击打开设置界面</string>
  <string name="scanning_network">正在扫描网络</string>
  <string name="direct_connect_to">直连到 %s</string>
  <string name="join_to">加入到当前网络－%s</string>
  <string name="choose_connect_mode">选择模式</string>
  <string name="connect_failed">连接到 %s 失败</string>
  <string name="please_input_password">请输入 %s 的密码</string>
  <string name="connecting">正在连接 %s …</string>
  <string name="setting_device">正在配置设备，请稍候</string>
  <string name="connected">已连接到 %s</string>
  <string name="input_current_netword_password">输入当前网络 - %s 的密码</string>
  <string name="init_migu">正在初始化咪咕音乐</string>
  <string name="init_migu_failed">初始化咪咕音乐失败</string>
  <string name="add_to_player_list">添加到</string>
  <string name="immediate">立即播放</string>
  <string name="ranking">排行榜</string>
  <string name="song_list">歌单</string>
  <string name="selected_song">已选择%s首歌曲</string>
  <string name="play_all">全部播放</string>
  <string name="multi_select">多选</string>
  <string name="is_clear_playlist">是否清空播放队列</string>
  <string name="yes">是</string>
  <string name="no">否</string>
  <string name="get_play_url_failed">获取 %s 的播放地址失败</string>
  <string name="failed">失败</string>
  <string name="paused">暂停</string>
  <string name="pending">等待</string>
  <string name="is_remove_download_task">是否删除下载任务：%s</string>
  <string name="chinese_male">华语男歌手</string>
  <string name="chinese_female">华语女歌手</string>
  <string name="chinese_band">华语乐队/组合</string>
  <string name="ea_male">欧美男歌手</string>
  <string name="ea_female">欧美女歌手</string>
  <string name="ea_band">欧美乐队/组合</string>
  <string name="jk_male">日韩男歌手</string>
  <string name="jk_female">日韩女歌手</string>
  <string name="jk_band">日韩乐队/组合</string>
  <string name="input_song_title_or_artist_name">请输入歌曲名、歌手名</string>
  <string name="justing">静雅思听</string>
  <string name="author">作者：%s</string>
  <string name="actor">播音：%s</string>
  <string name="beatles_des">CD品质音效，如同现场聆听</string>
  <string name="justing_des">耳边私书房</string>
    <string name="find_new_device">
        <u>发现 %s 个新设备, 点击进入设置</u>
    </string>
  <string name="this_phone_des">当前手机</string>
  <string name="device_setting">设备设置</string>
  <string name="please_choose_device">请选择设备：</string>
  <string name="cancel">取 消</string>
  <string name="device_name_label">设备名称：</string>
  <string name="ap_pass_label">设备网络密码：</string>
  <string name="current_device_label">当前设备：</string>
  <string name="connect">连 接</string>
  <string name="enter_network_password">输入网络密码</string>
  <string name="choose_network">选择连接的网络：</string>
  <string name="enter_device_password">输入设备密码</string>
  <string name="please_enter_device_password">请输入设备密码</string>
  <string name="please_choose_network">请选择连接的网络</string>
  <string name="please_enter_network_password">请输入网络密码</string>
  <string name="device_ssid">设备ID - %s</string>
  <string name="connect_device_failed">连接设备失败</string>
  <string name="setting_device_failed">设置设备失败</string>
  <string name="connecting_device">正在连接设备，请稍候</string>
  <string name="searching_device">正在搜索设备，请稍候</string>
  <string name="connect_router_failed">连接网络失败</string>
  <string name="connecting_router">正在连接网络，请稍候</string>
  <string name="rename">重命名</string>
  <string name="save">保存</string>
  <string name="rename_device">重命名设备</string>
  <string name="please_enter_device_name">请输入设备名称</string>
  <string name="unknown_device">未知设备</string>
  <string name="song1_working">音乐1号正在运行</string>
  <string name="song1">音乐1号</string>
  <string name="new_device_management">新设备管理</string>
  <string name="refresh">刷新</string>
  <string name="download_music">下载音乐</string>
  <string name="my_music">我的音乐</string>
  <string name="shared_device">共享设备</string>
  <string name="device_list">设备列表</string>
  <string name="start_playing">开始播放 %s</string>
  <string name="download_failed_no_sdcard">下载 %s 失败，无法在 SD 卡中创建下载目录</string>
  <string name="song_menu">歌单</string>
  <string name="zero_time">00:00</string>
  <string name="play_mode">播放模式</string>
  <string name="drawer_open">打开抽屉</string>
  <string name="drawer_close">关闭抽屉</string>

  <string name="red_heart">我喜欢</string>
  <string name="favorite">自建歌单</string>
  <string name="new_favorite">新 建</string>
  <string name="please_input_favorite_name">请输入新建歌单名称</string>
  <string name="delete">删 除</string>
  <string name="selected_items">选中 %s 项</string>
  <string name="add_to">添加</string>
  <string name="create_new_favorite">新建歌单</string>
  <string name="add_to_favorite">添加 %1$s 到 %2$s</string>
  <string name="favorite_contains_audio">%1$s 已经存在于 %2$s 中</string>

  <string name="task_doing">下载中(%s)</string>
  <string name="task_done">已下载(%s)</string>
  <string name="not_quit_msg">多留会</string>
  <string name="quit_msg">下次再来</string>
  <string name="current_player_is_occupied">当前设备已被占用</string>
  <string name="test">测试</string>
  <string name="confirm_delete">确定要删除吗？</string>
  <string name="playAllAudios">随机播放所有歌曲</string>
  <string name="allAudios">共%s首歌曲</string>
  <string name="randomPlay">随机播放</string>
  <string name="setting_timer">设置关闭时间</string>
  <string name="zero_minutes">0分钟</string>
  <string name="max_minutes">120分钟</string>
  <string name="stop_timer">停止</string>

  <string name="added_to_red_heart">收藏成功</string>
  <string name="removed_frome_red_heart">取消收藏成功</string>
  <string name="lookInfo">查看信息</string>
  <string name="updateTitle">修改信息</string>

  <string name="selectAll">全 选</string>
  <string name="edit">编 辑</string>
  <string name="exitMsg">确定退出应用?</string>

  <string name="songInfo">歌曲信息</string>
  <string name="songName">歌曲名称:&#160;</string>
  <string name="fileType">文件格式:&#160;</string>
  <string name="fileSize">文件大小:&#160;</string>
  <string name="duration">播放时长:&#160;</string>
  <string name="path">保存路径:&#160;</string>
  <string name="update">修 改</string>
  <string name="close">关 闭</string>
  <string name="scanning_file">正在扫描: %s</string>
  <string name="prepare_for_scanning">正在准备扫描…</string>
  <string name="scan">扫描</string>
  <string name="need_to_scan">是否开始扫描音乐？</string>
  <string name="scanning_please_wait">正在扫描，请稍候…</string>
  <string name="invalid_audio">无法播放 %s</string>

  <string name="scan_compltion">扫描完成，新增歌曲%1$d首，删除歌曲%2$d首</string>
  <string name="sanning">正在扫描</string>

  <string name="lossless">无损</string>
  <string name="delete_failed">删除失败</string>
  <string name="audio_info">歌曲信息</string>
  <string name="audio_total">共%s首</string>

  <string name="off_line">离线</string>
  <string name="collection">收藏</string>
  <string name="cancel_collection">取消收藏</string>
  <string name="description">描述</string>
  <string name="share">分享</string>
  <string name="choose_favorite">请选择歌单</string>

  <array name="timer_values">
    <item>关闭</item>
    <item>15分钟</item>
    <item>30分钟</item>
    <item>45分钟</item>
    <item>60分钟</item>
    <item>120分钟</item>
  </array>

  <array name="chars">
    <item>A</item>
    <item>B</item>
    <item>C</item>
    <item>D</item>
    <item>E</item>
    <item>F</item>
    <item>G</item>
    <item>H</item>
    <item>I</item>
    <item>J</item>
    <item>K</item>
    <item>L</item>
    <item>M</item>
    <item>N</item>
    <item>O</item>
    <item>P</item>
    <item>Q</item>
    <item>R</item>
    <item>S</item>
    <item>T</item>
    <item>U</item>
    <item>V</item>
    <item>W</item>
    <item>X</item>
    <item>Y</item>
    <item>Z</item>
    <item>"#"</item>
  </array>
</resources>
