<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

  <TextView
      android:id="@+id/empty"
      android:layout_gravity="center"
      android:text="@string/empty"
      android:visibility="gone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <LinearLayout
      android:id="@+id/loading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="vertical"
      android:visibility="gone"
      android:gravity="center">

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_gravity="center_horizontal"
        />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/error"
      android:visibility="gone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="vertical"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_error"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/retry"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/retry"
        android:layout_gravity="center_horizontal"
        />
  </LinearLayout>
</FrameLayout>