<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

  <LinearLayout
      android:id="@+id/loading"
      android:orientation="vertical"
      android:layout_centerInParent="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        />
  </LinearLayout>

  <LinearLayout
      android:visibility="gone"
      android:id="@+id/content"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
  </LinearLayout>

  <TextView
      android:id="@+id/empty"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:text="@string/empty"
      android:visibility="gone"
      android:textColor="#000000"
      />

  <LinearLayout
      android:id="@+id/error"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_centerInParent="true"
      android:orientation="vertical"
      android:visibility="gone"
      >

    <TextView
        android:id="@+id/error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_error"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#000000"
        />

    <Button
        android:id="@+id/retry_btn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:text="@string/retry"
        />
  </LinearLayout>

</RelativeLayout>