<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

  <GridView
      android:id="@+id/grid"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:columnWidth="120dp"
      android:padding="1dp"
      android:numColumns="auto_fit"/>

  <ProgressBar
      android:id="@+id/loading"
      android:visibility="gone"
      android:layout_centerInParent="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <LinearLayout
      android:id="@+id/retry"
      android:visibility="gone"
      android:layout_centerInParent="true"
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

    <TextView
        android:text="@string/load_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/retry_btn"
        android:text="@string/retry"
        android:textSize="@dimen/text_size_normal"
        android:layout_width="50dp"
        android:layout_height="30dp"/>
  </LinearLayout>

  <TextView
      android:id="@+id/empty"
      android:visibility="gone"
      android:text="@string/empty"
      android:layout_centerInParent="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
</RelativeLayout>