<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

  <RadioGroup
      android:id="@+id/segment_control"
      android:paddingTop="4dp"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/bg"
      android:orientation="horizontal">

    <RadioButton
        android:id="@+id/songButton"
        android:button="@null"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/song"
        android:textSize="@dimen/text_size_normal"
        style="@style/SegmentButtonLeft"
        />

    <RadioButton
        android:id="@+id/albumButton"
        android:button="@null"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/album"
        android:textSize="@dimen/text_size_normal"
        style="@style/SegmentButton"
        />

    <RadioButton
        android:id="@+id/artistButton"
        android:button="@null"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/artist"
        android:textSize="@dimen/text_size_normal"
        style="@style/SegmentButtonRight"
        />
  </RadioGroup>

  <android.support.v4.view.ViewPager
      android:id="@+id/pager"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
  </android.support.v4.view.ViewPager>
</LinearLayout>