<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/title_height"
      android:background="@color/title_bg_color"
      android:gravity="center">

    <ImageView
        android:id="@+id/titleIconView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/title_text_color"
        android:text="@string/newDevice"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/setDeviceName"/>

      <Spinner
          android:layout_width="@dimen/spinner_width"
          android:layout_height="@dimen/spinner_height"
          android:id="@+id/deviceNameSpinner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/selectNetwork"/>

      <Spinner
          android:layout_width="@dimen/spinner_width"
          android:layout_height="@dimen/spinner_height"
          android:id="@+id/networkSpinner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/networkPass"/>

      <EditText
          android:layout_width="@dimen/spinner_width"
          android:layout_height="@dimen/spinner_height"
          android:inputType="textPassword"
          android:id="@+id/networkPassEditText"/>
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:orientation="vertical"
      android:gravity="center">
    <LinearLayout
        android:layout_width="@dimen/spinner_width"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/spinner_width"
        android:layout_height="wrap_content">
      <ProgressBar
          style="?android:attr/progressBarStyleHorizontal"
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:id="@+id/progressBar"
          android:layout_gravity="center_horizontal"
          android:background="@color/white"
          android:progressDrawable="@drawable/progressbar"/>
    </LinearLayout>

  </LinearLayout>

  <View
      android:layout_width="match_parent"
      android:layout_height="0.1dp"
      android:background="@color/title_bg_color"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:orientation="horizontal"
      android:gravity="center">

    <Button
        android:id="@+id/cancle"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/cancle"/>

    <View
        android:layout_width="0.1dp"
        android:layout_height="30dp"
        android:background="@color/title_bg_color"
        />

    <Button
        android:id="@+id/confirm"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/confirm"/>
  </LinearLayout>

</LinearLayout>